--- a/README
+++ b/README
@@ -1,1 +1,11 @@
-Yafaray exporter for Blender 2.54
+Yafaray exporter for Blender 2.55
+FOR WIN32:
+This exporter need the package of Yafaray from Kerbox/github;
+http://cloud.github.com/downloads/Kerbox/yafaray_exporter/YafaRay_0.1.2beta_win32.zip
+
+Downloading and extract at Blender/2.55/scripts/addons/yafaray directory
+This will create a dir /bin/plugins containing the necessary files.
+We need to test it and report errors found.
+Thanks.
+FROM LINUX:
+TODO
