--- a/README
+++ b/README
@@ -5,6 +5,7 @@ http://cloud.github.com/downloads/Kerbox/yafaray_exporter/YafaRay_0.1.2beta_win3
 
 Downloading and extract at Blender/2.55/scripts/addons/yafaray directory
 This will create a dir /bin/plugins containing the necessary files.
+It is not necessary to install YafaRay.
 We need to test it and report errors found.
 Thanks.
 FOR LINUX:
