--- a/README
+++ b/README
@@ -1,10 +1,7 @@
-Yafaray exporter for Blender 2.57
-
-The exporter is in a very experimental stage so use it for testing purposes only
-
+Yafaray exporter for Blender 2.58:
+The exporter is in an experimental stage, so use it for testing purposes only.
 For the latest builds check http://www.yafaray.org/development and graphicall.org
-
-Downloading and extract at Blender/2.57/scripts/addons/yafaray directory
+Downloading and extract at Blender/2.58/scripts/addons/yafaray directory
 
 We need to test it and report errors found.
 Thanks.
