--- a/README
+++ b/README
@@ -6,7 +6,7 @@ For the latest exporter updates check:
 https://github.com/YafaRay/Blender-Exporter
 
 and for the latest Yafaray builds (including exporter files too) 
-check megasofts builds on graphicall.org:
+check for builds on graphicall.org:
 
 http://www.graphicall.org/yafaray
 
