--- a/README
+++ b/README
@@ -1,6 +1,26 @@
-Yafaray 0.1.5 exporter for Blender 2.7:
+Yafaray 0.1.99-beta1 (2015-04-11) David Bluecame experimental exporter for Blender 2.74:
+** THIS BUILD CONTAINS EXPERIMENTAL CHANGES AND FEATURES - DO NOT USE FOR PRODUCTION SCENES **
 
-For the latest exporter updates check:
+Unofficial build for Windows 7 and 8.1 (64 bits) by David Bluecame
+Based on YafaRay git version + pull requests from David Bluecame not yet in master for
+- New Clay Material
+- Texture mapping of Sigma factor in Shiny Diffuse/Oren Nayar
+- Fix for Negated colors in Musgrave/Voronoi textures mapped to diffuse color.
+
+To install YafaRay to blender, copy this entire folder "yafaray" to the "C:\Program Files\Blender Foundation\Blender\2.74\scripts\addons" folder.
+
+After it, start Blender, go to User Preferences, AddOns and try to enable Render:YafaRay. Once (hopefully) enabled you should see it in the list of renderers.
+
+This application is provided as is, and no guarantee is given that this code will preform in the desired way.
+
+I hope this helps and you can start or continue to use this very nice and fast renderer!
+
+Best regards. David.
+
+****
+
+
+For the official YafaRay latest exporter updates check:
 
 https://github.com/YafaRay/Blender-Exporter
 
@@ -14,8 +34,6 @@ or look into this forum post for other platform builds:
 http://www.yafaray.org/community/forum/viewtopic.php?f=16&t=3520
 
 http://www.yafaray.org/community/forum/viewforum.php?f=12
-
-Download and extract the exporter files and folders to the 'Blender/2.7/scripts/addons/yafaray' directory.
 
 Please post bugreports and feature requests here:
 http://www.yafaray.org/development/bugtracker/yafaray
