Updates for Builds and Texture mapping for Diffuse Reflection in Shiny Diffuse material
 Changes to be committed:
	modified:   README
	modified:   __init__.py
	modified:   io/yaf_material.py
	modified:   ui/properties_yaf_texture.py

--- a/README
+++ b/README
@@ -1,15 +1,21 @@
-Yafaray 0.1.99-beta2 (2015-04-18) David Bluecame experimental exporter for Blender 2.74:
+Yafaray 0.1.99-beta3 (2015-04-xx) David Bluecame experimental exporter for Blender 2.74:
 ** THIS BUILD CONTAINS EXPERIMENTAL CHANGES AND FEATURES - DO NOT USE FOR PRODUCTION SCENES **
 
 Unofficial build for XXXX (XX bits) by David Bluecame
+* Important: the Linux 32bit build requires a processor with SSE/SSE2 instructions. Any non-ancient processor should have them *
+
 Based on YafaRay git version + pull requests from David Bluecame not yet in master for
 - New Clay Material, with a small correction since the previous beta1
 - Texture mapping of Sigma factor in Shiny Diffuse/Oren Nayar
 
-*WARNING* This beta2 includes an EXPERIMENTAL change to calculate automatically Shadow Bias and Minimum Ray Dist depending on the scene size. This is to avoid black artifacts when resizing the objects. However as it's a fundamental change that affects everything, perhaps some new artifacts could appear in the images now and further fine tuning needed in this new formula. Please give us feedback about it in the forum:
+*WARNING* This build includes an EXPERIMENTAL change to calculate automatically Shadow Bias and Minimum Ray Dist depending on the scene size. This is to avoid black artifacts when resizing the objects. However as it's a fundamental change that affects everything, perhaps some new artifacts could appear in the images now and further fine tuning needed in this new formula. Please give us feedback about it in the forum:
 http://www.yafaray.org/community/forum/viewtopic.php?f=23&t=5084 
 
-To install YafaRay to blender, copy this entire folder "yafaray" to the "C:\Program Files\Blender Foundation\Blender\2.74\scripts\addons" folder.
+To install YafaRay to blender:
+* Don't use the Blender from the distro repositories. Download the Blender official Linux 64bit build from: http://ftp.halifax.rwth-aachen.de/blender/release/Blender2.74/blender-2.74-linux-glibc211-x86_64.tar.bz2 and uncompress it in a folder, for example in $HOME/
+* Copy this entire folder "yafaray" to:
+  - in Linux 64bit, for example: "$HOME/blender-2.74-linux-glibc211-x86_64/2.74/scripts/addons" folder.
+  - in Windows 64bit, for example: "C:\Program Files\Blender Foundation\Blender\2.74\scripts\addons" folder.
 
 After it, start Blender, go to User Preferences, AddOns and try to enable Render:YafaRay. Once (hopefully) enabled you should see it in the list of renderers.
 
