--- a/README
+++ b/README
@@ -1,12 +1,24 @@
-Yafaray 0.1.99-beta3 (2015-04-xx) David Bluecame experimental exporter for Blender 2.74:
+Yafaray 0.1.99-beta3 (2015-05-02) David Bluecame experimental exporter for Blender 2.74.5:
 ** THIS BUILD CONTAINS EXPERIMENTAL CHANGES AND FEATURES - DO NOT USE FOR PRODUCTION SCENES **
 
 Unofficial build for XXXX (XX bits) by David Bluecame
 * Important: the Linux 32bit build requires a processor with SSE/SSE2 instructions. Any non-ancient processor should have them *
 
 Based on YafaRay git version + pull requests from David Bluecame not yet in master for
-- New Clay Material, with a small correction since the previous beta1
-- Texture mapping of Sigma factor in Shiny Diffuse/Oren Nayar
+
+- New Clay Material system, more flexible and powerful. More information in: http://www.yafaray.org/community/forum/viewtopic.php?f=16&t=5079
+
+- Extended Texture Mapping system (very experimental!!), allowing using textures to map additional properties in materials, to be able to create either more realistic or more exotic materials and reduce the dependency on the "blend" material. More information in: http://www.yafaray.org/community/forum/viewtopic.php?f=22&t=5091   The new texture mappings in addition to the existing ones are: 
+	- Diffuse Reflection Amount in Shiny Diffuse, Glossy and Coated Glossy materials
+	- Sigma factor for Oren Nayar in Shiny Diffuse, Glossy and Coated Glossy materials
+	- Filter color in Glass and Rough Glass.
+	- IOR refractive factor in Glass and Rough Glass. The texture amounts are added to the IOR of the material.
+	- IOR refractive factor for the Fresnel in Shiny Diffuse, Glossy and Coated Glossy materials.
+	- Roughness factor in Rough Glass material.
+	- Exponent factor in Glossy and Coated Glossy materials
+	- Mirror amount in Coated Glossy materials.
+	- Mirror Color in Glass, Rough Glass and Coated Glossy Materials
+
 
 *WARNING* This build includes an EXPERIMENTAL change to calculate automatically Shadow Bias and Minimum Ray Dist depending on the scene size. This is to avoid black artifacts when resizing the objects. However as it's a fundamental change that affects everything, perhaps some new artifacts could appear in the images now and further fine tuning needed in this new formula. Please give us feedback about it in the forum:
 http://www.yafaray.org/community/forum/viewtopic.php?f=23&t=5084 
