More advanced material visibility and shadow control
I've added a parameter to control which lights cast shadows and which ones do not.

Also, I've removed the recently added cast_shadow parameter and replaced it by a "visibility" parameter (enum type) so we can control the material visibility and shadow at the same time. The visibility option (in the material advanced settings) will have these possible values (per-material):

'normal' (default): Normal - Normal visibility - visible casting shadows.
'no_shadows': No shadows - visible but not casting shadows.
'shadow_only': Shadows only - invisible but casting shadows.
'invisible': Invisible: totally invisible material.

 Changes to be committed:
	modified:   README
	modified:   __init__.py
	modified:   io/yaf_light.py
	modified:   io/yaf_material.py
	modified:   prop/yaf_light.py
	modified:   prop/yaf_material.py
	modified:   ui/properties_yaf_light.py
	modified:   ui/properties_yaf_material.py

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Yafaray 0.1.99-beta4 (2015-06-20) David Bluecame experimental exporter for Blender 2.75 RC:
+Yafaray 0.1.99-beta4c (2015-07-29) David Bluecame experimental exporter for Blender 2.75 RC:
 ** THIS BUILD CONTAINS EXPERIMENTAL CHANGES AND FEATURES - DO NOT USE FOR PRODUCTION SCENES **
 
 Unofficial build for XXXX (XX bits) by David Bluecame
