STRUCTURAL CHANGES: Render Passes/Views, light groups, etc
- Initial support for Render Passes (partial in sppm, path and almost nothing in bidir)
- Initial support for Render Views
- Initial support for Light Groups
- Removed previous z-depth processing
- Fixed some issues with rough glass
- Added dispersive caustics to sppm
- Sixed save to image not showing in blender afterwards
- Added xml processing "partial image save timer" option
- Added support for multilayer EXR in Blender-Exporter and XML interface
- Fixed YafaRay panels appearing in LuxRender
- Fixed sphere light surface didn't change with power value.

 Changes to be committed:
	modified:   README
	modified:   __init__.py
	modified:   io/yaf_export.py
	modified:   io/yaf_integrator.py
	modified:   io/yaf_light.py
	modified:   io/yaf_material.py
	modified:   io/yaf_object.py
	modified:   io/yaf_scene.py
	modified:   io/yaf_texture.py
	modified:   io/yaf_world.py
	modified:   prop/yaf_light.py
	modified:   prop/yaf_object.py
	modified:   prop/yaf_scene.py
	modified:   prop/yaf_texture.py
	modified:   ui/__init__.py
	modified:   ui/properties_yaf_AA_settings.py
	modified:   ui/properties_yaf_camera.py
	modified:   ui/properties_yaf_general_settings.py
	modified:   ui/properties_yaf_integrator.py
	new file:   ui/properties_yaf_layer_passes.py
	modified:   ui/properties_yaf_light.py
	modified:   ui/properties_yaf_material.py
	modified:   ui/properties_yaf_object.py
	modified:   ui/properties_yaf_render.py
	new file:   ui/properties_yaf_scene.py
	modified:   ui/properties_yaf_texture.py
	modified:   ui/properties_yaf_volume_integrator.py
	modified:   ui/properties_yaf_world.py

--- a/README
+++ b/README
@@ -1,10 +1,12 @@
-Yafaray 0.1.99-beta4c (2015-07-29) David Bluecame experimental exporter for Blender 2.75 RC:
+Yafaray-E (Experimental) v1.0.0 (2015-0x-xx) David Bluecame experimental exporter for Blender 2.76:
 ** THIS BUILD CONTAINS EXPERIMENTAL CHANGES AND FEATURES - DO NOT USE FOR PRODUCTION SCENES **
 
 Unofficial build for XXXX (XX bits) by David Bluecame
 * Important: the Linux 32bit build requires a processor with SSE/SSE2 instructions. Any non-ancient processor should have them *
 
 Based on YafaRay git version + pull requests from David Bluecame not yet in master for
+
+FIXME: (PENDING TO UPDATE CHANGELOG!!!!!)
 
 - New Clay Material system, more flexible and powerful. More information in: http://www.yafaray.org/community/forum/viewtopic.php?f=16&t=5079
 
