--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,15 @@ Note: this CHANGELOG file only shows the YafaRay-E releases and changes, not the
 
 For more information about releases and changes see: https://github.com/DavidBluecame/Blender-Exporter/releases
 
+
+Yafaray-E v2.0.2 (2016-01-26) for Blender 2.76b:
+------------------------------------------------
+- Fixed crash when Blend materials were used and their components were also blend, which had some component materials missing
+- Max value for the dark noise factor parameter expanded to 1.0 to allow even darker areas to have better AA sampling
+- Fix for Oren Nayar to avoid generating white/black dots when used together with bump mapping
+- Fix for black dots using HDRI spherical and Coated Glossy
+
+
 Yafaray-E v2.0.1 (2016-01-05) for Blender 2.76b:
 ------------------------------------------------
 - Fixed Instances not working in v2.0.0 (regression)
