--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,9 @@ Note: this CHANGELOG file only shows the YafaRay-E releases and changes, not the
 
 For more information about releases and changes see: https://github.com/DavidBluecame/Blender-Exporter/releases
 
+Important: read the README file for installation instructions and important information about YafaRay
+
+
 Yafaray-E v2.1.1 (2016-02-06) for Blender 2.76b:
 ------------------------------------------------
 Note: there has been important changes and bug fixes in this version. They have solved some long-standing issues but perhaps they could cause new issues and unexpected results, so we have to keep an eye on them.
@@ -32,6 +35,8 @@ Note: there has been important changes and bug fixes in this version. They have 
     - Splitted the Light power and Light Color controls in two: Key Light power control and Fill Lights power control
     - Removed PosX,PosZ controls as considered unnecessary and complicating the interface.
     - Removed Texture scale/offset controls as they could cause confusion with the actual texture scale/offset parameters
+
+Important note: YafaRay only supports *one* scene in the .blend file. If you have more than one scene, it could cause unexpected results and problems in the new Material Preview Controls.
 
 
 Yafaray-E v2.1.0 (2016-01-31) for Blender 2.76b:
